Fixed header alignment in SAT.
Test Plan:
Looked at graph and text passage questions.

Auditors: kitt

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -662,6 +662,10 @@ body.sat-section {
                     blockquote {
                         padding: 0;
                         margin-right: 22px;
+
+                        & > .paragraph:nth-child(1) {
+                            margin-top: 0;
+                        }
                     }
                 }
                 &:nth-child(2) {
